--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -55,8 +55,7 @@
   background: white;
   left: 50%;
   margin-left: -3em;
-  top: 49%;
-  top: 31.5%;
+  top: 30%;
 
   -webkit-animation: blink 5s infinite; /* Safari 4+ */
   -moz-animation:    blink 5s infinite; /* Fx 5+ */
@@ -65,29 +64,29 @@
 }
 
 @-webkit-keyframes blink {
-  0%   { top: 31.5%; }
-  92% { top: 31.5%; }
+  0%   { top: 30%; }
+  92% { top: 30%; }
   96%   { top: 49%; }
-  100%   { top: 31.5%; }
+  100%   { top: 30%; }
 }
 
 @-moz-keyframes blink {
-  0%   { top: 31.5%; }
-  92% { top: 31.5%; }
+  0%   { top: 30%; }
+  92% { top: 30%; }
   96%   { top: 49%; }
-  100%   { top: 31.5%; }
+  100%   { top: 30%; }
 }
 
 @-o-keyframes blink {
-  0%   { top: 31.5%; }
-  92% { top: 31.5%; }
+  0%   { top: 30%; }
+  92% { top: 30%; }
   96%   { top: 49%; }
-  100%   { top: 31.5%; }
+  100%   { top: 30%; }
 }
 
 @-keyframes blink {
-  0%   { top: 31.5%; }
-  92% { top: 31.5%; }
+  0%   { top: 30%; }
+  92% { top: 30%; }
   96%   { top: 49%; }
-  100%   { top: 31.5%; }
+  100%   { top: 30%; }
 }
